# N-gram-dash

./: .gitignore  Dockerfile  app.py  deploy.sh  pyproject.toml  requirements.txt
ngram_app/: app.py  callbacks.py  layout.py  utils.py
ngram_app/assets/: custom.css
