[project]
name = "N-gram-dash"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "yoonsen", email = "yoonsen@gmail.com"},
]
dependencies = ["dash>=3.0.0", "plotly>=6.0.1", "dhlab>=2.41.0", "dash-bootstrap-components>=2.0.0", "pillow>=11.1.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
use_venv = false  

[project.scripts]
ngram-app = "ngram_app.app:main"
